--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,11 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{js,jsx,yaml}]
+[*.{yaml,md}]
+indent_style = space
+indent_size = 2
+
+[*.{js,jsx}]
 indent_style = tab
 indent_size = 2
 
